[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/homingMissile.gd" type="Script" id=1]
[ext_resource path="res://visuals/muzzle_02.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 18, 0, 14, -4, 0, -4, -8, -7, -30, 0, -8, 7, 0, 4, 14, 4 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.015873, 0.15873, 0.785714, 1 )
colors = PoolColorArray( 0.94902, 0.85098, 0.705882, 0, 0.900098, 0.394258, 0.15822, 1, 0.954785, 0.885561, 0.469933, 1, 0.941176, 0.905882, 0.67451, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.101113, 0.978901 ), 0.0, 0.0, 0, 0, Vector2( 0.46106, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 90.0
scale = 0.05
scale_random = 0.02
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )

[node name="HomingMissile" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -4, -8, 4, 0, 2, 14, 2, 16, 0, 14, -2, 0, -2 )

[node name="Destruction" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destruction"]
position = Vector2( 7, 0 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( -16, 0 )
amount = 40
lifetime = 0.1
randomness = 0.59
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.294118, 0.0588235, 1 )
position = Vector2( 3, -0.500001 )
scale = Vector2( 0.34375, 0.140625 )
texture = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.0156863, 0.0784314, 0.141176, 1 )
antialiased = true
polygon = PoolVector2Array( 18, 0, 14, -4, 0, -4, -8, -7, -8, 7, 0, 4, 14, 4 )

[node name="Polygon2D2" type="Polygon2D" parent="Polygon2D"]
modulate = Color( 1.6, 1.6, 1.6, 1 )
color = Color( 1, 0.556863, 0.501961, 1 )
antialiased = true
polygon = PoolVector2Array( 14, -4, 0, -4, 0, 4, 14, 4 )

[node name="Polygon2D3" type="Polygon2D" parent="Polygon2D"]
modulate = Color( 1.6, 1.6, 1.6, 1 )
color = Color( 0.772549, 0.227451, 0.615686, 1 )
antialiased = true
polygon = PoolVector2Array( 14, -4, 14, 4, 18, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_HomingMissile_body_entered"]
[connection signal="body_entered" from="Destruction" to="." method="_on_Destruction_body_entered"]
[connection signal="body_exited" from="Destruction" to="." method="_on_Destruction_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
